# TwiviaBot

./: .env  .gitignore  .replit  Pipfile  README.md  Spacefile  Trivia-Printable.xlsx  api.py  bot.py  channel_data.db  formatanswers.py  genshin.json  main.py  print_database.py  pyproject.toml  requirements.txt  scores.json  trivia.xlsx  triviatransfer.py  twivia.bat  twiviabot.bat
test-files/: api.py  print_database.py
